<resources>
    <string name="app_name">Pentagono Online</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pentagono_top_resources">Pentagono top resources</string>
    <string name="enter_pdf_new_name">Enter PDF new Name</string>
    <string name="upload_resource">Upload Resource</string>
    <string name="view_resources">View Resources</string>
    <string name="logo">logo</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="todo">TODO</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_bullet">• Address:</string>
    <string name="time_bullet">• Time:</string>
    <string name="style_list_bullet">• Summary:</string>
    <string name="bullet">•</string>
    style_list_bullet
</resources>
