<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lines"
    android:padding="30dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/tomato"
        android:gravity="center_horizontal"
        android:text="@string/pentagono_top_resources"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txt_pdfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:autofillHints=""
        android:background="@color/tomato"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/enter_pdf_new_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/upload_resource"
        android:textSize="20sp"
        android:background="@color/tomato"
        android:layout_marginTop="390dp"
        android:layout_marginStart="5dp" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/view_resources"
        android:background="@color/tomato"
        android:textSize="20sp"
        android:layout_marginTop="460dp"
        android:onClick="btn_action"
        android:layout_marginStart="5dp" />


    <Button
        android:id="@+id/btn_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@color/tomato"
        android:text="home"
        android:textSize="20sp"
        android:layout_marginTop="520dp"
        android:onClick="btn_action"
        android:layout_marginStart="5dp" />


</RelativeLayout>