<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/lines"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/layout_user_information"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/black"

        android:padding="8dp"
        android:weightSum="4">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_account" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Juan Manuel Rodriguez"
                android:id="@+id/txt_user_name"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_member_type"
                android:text="Student"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/log_out"
                android:text="log out"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textSize="12sp" />




        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id = "@+id/card_view_booking"
            android:layout_marginRight = "8dp"
            xmlns:app= "http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius = "8dp"
            android:layout_width= "0dp"
            android:layout_weight = "1"
            android:layout_height ="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity ="center_horizontal"
                    android:src="@drawable/ic_booking" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Booking"
                    android:layout_gravity="center_horizontal"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id = "@+id/card_view_resources"
            android:layout_marginRight = "8dp"
            xmlns:app= "http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius = "8dp"
            android:layout_width= "0dp"
            android:layout_weight = "1"
            android:layout_height ="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity ="center_horizontal"
                    android:src="@drawable/ic_resources" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Resources"
                    android:layout_gravity="center_horizontal"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id = "@+id/card_view_history"
            android:layout_marginRight = "8dp"
            xmlns:app= "http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius = "8dp"
            android:layout_width= "0dp"
            android:layout_weight = "1"
            android:layout_height ="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity ="center_horizontal"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Historic"
                    android:layout_gravity="center_horizontal"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id = "@+id/card_view_chat"
            android:layout_marginRight = "8dp"
            xmlns:app= "http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius = "8dp"
            android:layout_width= "0dp"
            android:layout_weight = "1"
            android:layout_height ="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity ="center_horizontal"
                    android:src="@drawable/ic_chat_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Assistant"
                    android:layout_gravity="center_horizontal"/>




            </LinearLayout>


        </androidx.cardview.widget.CardView>









    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_booking_info"
            app:cardCornerRadius="8dp"
            android:visibility="gone"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_event_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Your Booking Information"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>




            </LinearLayout>


            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/address_bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Cra 1 Nº 18A - 12"/>


                </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/time_bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_time_booking_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 9AM - 8PM"/>

            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/style_list_bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txt_course_profesor_booking_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Juan Manuel"
                        android:textStyle="bold"/>

                </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txt_time_remain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <Button
                        android:layout_marginTop="4dp"
                        android:id="@+id/btn_change_booking"
                        android:textColor="@color/black"
                        android:layout_marginRight="4dp"
                        android:text="CHANGE"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_marginTop="4dp"
                        android:id="@+id/btn_delete_booking"
                        android:textColor="@color/black"
                        android:layout_marginRight="4dp"
                        android:text="DELETE"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>




                


            </LinearLayout>




        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ss.com.bannerslider.Slider
            android:id="@+id/banner_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="33dp"
                android:layout_marginLeft="33dp"
                android:text="Featured resources"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_look_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above = "@+id/bottom_navigation">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom = "true"
        android:background="@color/white"
        app:itemIconTint= "@android:color/white"
        app.itemTextColor= "@android:color/white"
        app:menu= "@menu/menu_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>

